Add empty implementation for MySQL PersistentTweetRepository.

--- a/internal/config/appsettings.json
+++ b/internal/config/appsettings.json
@@ -1,10 +1,10 @@
 {
-    "Mode": "InMemory",
+    "Mode": "Persistent",
     "ApiServer": {
         "ApplicationUrl": "localhost:8016"
     },
     "TweetsStorage": {
-        "ConnectionString": "mysql",
+        "ConnectionString": "myuser:mypassword@tcp(127.0.0.1:3306)",
         "DatabaseName": "TweetsDb"
     },
     "FeedsStorage": {
