Extract NATS URL to be configured in appsettings.

--- a/internal/config/appsettings.json
+++ b/internal/config/appsettings.json
@@ -1,5 +1,5 @@
 {
-    "Mode": "InMemory",
+    "Mode": "Persistent",
     "ApiServer": {
         "ApplicationUrl": "localhost:8016"
     },
@@ -11,5 +11,6 @@
         "ConnectionString": "mongodb://localhost:27017",
         "DatabaseName": "FeedsDb",
         "CollectionName": "Feeds"
-    }
+    },
+    "NATSUrl": "nats://localhost:4222"
 }
