Fix prod deployment of React client.

--- a/twitter-clone-client/Dockerfile
+++ b/twitter-clone-client/Dockerfile
@@ -4,12 +4,32 @@ WORKDIR /app
 
 COPY package*.json ./
 
-ENV NODE_ENV=production
+# Set NODE_ENV to production
+ENV NODE_ENV production
 
 RUN npm install
 
-COPY . ./
+# Create a temporary directory to hold the build context
+RUN mkdir /tmp/context
+
+# Copy only the necessary files for the build to the temporary directory
+COPY public /tmp/context/public
+COPY src /tmp/context/src
+COPY package.json /tmp/context
+
+# Copy node_modules to the temporary directory
+RUN cp -r node_modules /tmp/context/node_modules
+
+# Build the optimized production build
+RUN cd /tmp/context && npm run build
+
+# Install serve as a development dependency
+RUN npm install --save-dev serve
+
+# Copy the build files from the temporary directory to /app
+RUN cp -a /tmp/context/build /app
 
 EXPOSE 3000
 
-CMD [ "npm", "start:prod" ]
+# Start the serve command to serve the production build
+CMD ["npx", "serve", "-s", "build"]
