Move google OAuth2 config to appsettings. Extend configuration with OAuth2 section. Make OAuth2Router read configuration. Make it part of main router. Update appsettings.json.

--- a/internal/config/appsettings.json
+++ b/internal/config/appsettings.json
@@ -1,16 +1,15 @@
 {
-    "Mode": "Persistent",
+    "Mode": "InMemory",
     "ApiServer": {
         "ApplicationUrl": "localhost:8016"
     },
-    "TweetsStorage": {
-        "ConnectionString": "myuser:mypassword@tcp(127.0.0.1:3306)",
-        "DatabaseName": "TweetsDb"
-    },
-    "FeedsStorage": {
-        "ConnectionString": "mongodb://localhost:27017",
-        "DatabaseName": "FeedsDb",
-        "CollectionName": "Feeds"
-    },
-    "NATSUrl": "nats://localhost:4222"
+    "OAuth2": {
+        "RedirectURL": "http://localhost:8016/auth/google/callback",
+        "ClientID": "{CLIENTID}.apps.googleusercontent.com",
+        "ClientSecret": "{SECRET}",
+        "Scopes": [
+            "https://www.googleapis.com/auth/userinfo.email",
+            "https://www.googleapis.com/auth/userinfo.profile"
+        ]
+    }
 }
