--- a/internal/config/appsettings.json
+++ b/internal/config/appsettings.json
@@ -3,6 +3,7 @@
     "ApiServer": {
         "ApplicationUrl": "localhost:8016"
     },
+    "RedirectURI": "http://localhost:8016/redirect",
     "OAuth2": {
         "RedirectURL": "http://localhost:8016/auth/google/callback",
         "ClientID": "{CLIENTID}.apps.googleusercontent.com",
