EnableCors for userInfo. Make AllowOrigin come from the appsettings.

--- a/internal/config/appsettings.json
+++ b/internal/config/appsettings.json
@@ -3,7 +3,8 @@
     "ApiServer": {
         "ApplicationUrl": "localhost:8016"
     },
-    "RedirectURI": "http://localhost:8016/redirect",
+    "RedirectURI": "http://localhost:3000/callback",
+    "AllowOrigin": "http://localhost:3000",
     "OAuth2": {
         "RedirectURL": "http://localhost:8016/auth/google/callback",
         "ClientID": "{CLIENTID}.apps.googleusercontent.com",
