Make authentication optional and configurable from appsettings. Encapsulate authentication validator into dedicated struct. Make all route endpoints use authentication validator.

--- a/internal/config/appsettings.json
+++ b/internal/config/appsettings.json
@@ -5,13 +5,16 @@
     },
     "RedirectURI": "http://localhost:3000/callback",
     "AllowOrigin": "http://localhost:3000",
-    "OAuth2": {
-        "RedirectURL": "http://localhost:8016/auth/google/callback",
-        "ClientID": "{CLIENTID}.apps.googleusercontent.com",
-        "ClientSecret": "{SECRET}",
-        "Scopes": [
-            "https://www.googleapis.com/auth/userinfo.email",
-            "https://www.googleapis.com/auth/userinfo.profile"
-        ]
+    "Authentication": {
+        "Enable": true,
+        "OAuth2": {
+            "RedirectURL": "http://localhost:8016/auth/google/callback",
+            "ClientID": "{CLIENTID}.apps.googleusercontent.com",
+            "ClientSecret": "{SECRET}",
+            "Scopes": [
+                "https://www.googleapis.com/auth/userinfo.email",
+                "https://www.googleapis.com/auth/userinfo.profile"
+            ]
+        }
     }
 }
