--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,12 +49,10 @@ jobs:
     - name: Run tests
       run: go test ./... -v
       
-    - name: Set up Docker
-      uses: docker/setup-buildx-action@v2
-
-    - name: Run Docker Compose
-      run: |
-        docker-compose up -d # Start containers in detached mode
+    - name: Run docker-compose
+      uses: hoverkraft-tech/compose-action@v2.0.1
+      with:
+        compose-file: "./compose.yml"
         sleep 10 # Optional: wait for services to initialize
 
     - name: Install Node.js
