--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,5 +27,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
+      working-directory: ./twitter-clone-client
     - run: npm run build --if-present
+      working-directory: ./twitter-clone-client
     - run: npm test
+      working-directory: ./twitter-clone-client
