--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: ./twitter-clone-client/package-lock.json
     - run: npm ci
       working-directory: ./twitter-clone-client
     - run: npm run build --if-present
