--- a/genezio.yaml
+++ b/genezio.yaml
@@ -1,10 +1,15 @@
-frontend:
-    path: ./
-    publish: ""
-    scripts:
-        build: ""
-        deploy: ""
-    subdomain: go-twitter-clone
 name: go-twitter-clone
 region: eu-central-1
 yamlVersion: 2
+backend:
+  path: cmd
+  language:
+    name: go
+  environment:
+    Mode: Persistent
+    Authentication:Enable: "false"
+frontend:
+  path: twitter-clone-client
+  sdk:
+    language: ts
+  publish: dist
