Add new Cloud mode that would use gcloud services.

--- a/internal/config/appsettings.json
+++ b/internal/config/appsettings.json
@@ -1,5 +1,6 @@
 {
     "Mode": "InMemory",
+    "ProjectId": "Twitter-Clone",
     "ApiServer": {
         "ApplicationUrl": "localhost:8016"
     },
