--- a/internal/config/appsettings.json
+++ b/internal/config/appsettings.json
@@ -1,8 +1,17 @@
 {
-    "Mode": "InMemory",
-    "ProjectId": "Twitter-Clone",
+    "Mode": "Cloud",
+    "ProjectId": "{your-project-id}",
     "ApiServer": {
         "ApplicationUrl": "localhost:8016"
+    },
+    "TweetsStorage": {
+        "ConnectionString": "myuser:mypassword@tcp(127.0.0.1:3306)",
+        "DatabaseName": "TweetsDb"
+    },
+    "FeedsStorage": {
+        "ConnectionString": "mongodb://localhost:27017",
+        "DatabaseName": "FeedsDb",
+        "CollectionName": "Feeds"
     },
     "RedirectURI": "http://localhost:3000/callback",
     "AllowOrigin": "http://localhost:3000",
