--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -48,3 +48,21 @@ jobs:
 
     - name: Run tests
       run: go test ./... -v
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ env.DOCKER_USER }}
+        password: ${{ env.DOCKER_PASSWORD }}
+
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@v4
+      with:
+        images: ivanenkomak/twitter-clone-server
+    - name: Build and push
+      run: |
+        IMAGE_TAG="ivanenkomak/twitter-clone-server:latest"
+        DOCKERFILE="Dockerfile"
+        echo "Building Docker image with latest tag: ${IMAGE_TAG}"
+        docker buildx build -t "${IMAGE_TAG}" --file "${DOCKERFILE}" . --push
