--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,3 +33,21 @@ jobs:
       working-directory: ./twitter-clone-client
     - run: npm test
       working-directory: ./twitter-clone-client
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ env.DOCKER_USER }}
+        password: ${{ env.DOCKER_PASSWORD }}
+
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@v4
+      with:
+        images: ivanenkomak/twitter-clone-client
+    - name: Build and push
+      run: |
+        IMAGE_TAG="ivanenkomak/twitter-clone-client:latest"
+        DOCKERFILE="Dockerfile"
+        echo "Building Docker image with latest tag: ${IMAGE_TAG}"
+        docker buildx build -t "${IMAGE_TAG}" --file "${DOCKERFILE}" . --push
