--- a/.gitignore
+++ b/.gitignore
@@ -115,7 +115,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+.env.local
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
