--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 CLIENT_IMAGE=ivanenkomak/twitter-clone-client:latest
 SERVER_IMAGE=ivanenkomak/twitter-clone-server:latest
-PROJECT_ID=${{ secrets.PROJECT_ID }}
-OAUTH2_CLIENT_ID=${{ secrets.OAUTH2_CLIENT_ID }}
-OAUTH2_CLIENT_SECRET=${{ secrets.OAUTH2_CLIENT_SECRET }}
+PROJECT_ID=${PROJECT_ID}
+OAUTH2_CLIENT_ID=${OAUTH2_CLIENT_ID}
+OAUTH2_CLIENT_SECRET=${OAUTH2_CLIENT_SECRET}
