Pass GOOGLE_APPLICATION_CREDENTIALS to go app.

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ SERVER_IMAGE=ivanenkomak/twitter-clone-server:latest
 PROJECT_ID=${PROJECT_ID}
 OAUTH2_CLIENT_ID=${OAUTH2_CLIENT_ID}
 OAUTH2_CLIENT_SECRET=${OAUTH2_CLIENT_SECRET}
+GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS}
