--- a/compose.yaml
+++ b/compose.yaml
@@ -17,14 +17,19 @@ services:
       context: ./server
       dockerfile: Dockerfile
     container_name: twitter-clone-server
+    volumes:
+      # Map the JSON file from your local system to the container
+      - ./secrets/service-account.json:/secrets/service-account.json:r
     environment:
-      - "Mode=Persistent"
+      - "ProjectId=${PROJECT_ID}"
       - "TweetsStorage:ConnectionString=myuser:mypassword@tcp(twitter-mysql:3306)"
       - "FeedsStorage:ConnectionString=mongodb://twitter-mongo:27017"
       - "NATSUrl=nats://twitter-nats:4222"
       - "ApiServer:ApplicationUrl=0.0.0.0:8016"
       - "Authentication:Enable=true"
-      - "Authentication:OAuth2:ClientID"
+      - "Authentication:OAuth2:ClientID=${OAUTH2_CLIENT_ID}"
+      - "Authentication:OAuth2:ClientSecret=${OAUTH2_CLIENT_SECRET}"
+      - "GOOGLE_APPLICATION_CREDENTIALS=/secrets/service-account.json"
     ports:
       - 8016:8016
     depends_on:
