--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -84,6 +84,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Create secrets directory
+      run: mkdir -p ./secrets
+
+    - name: Copy service account JSON
+      run: echo "${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}" > ./secrets/service-account.json
+
     - name: Cache Docker layers
       uses: actions/cache@v3
       with:
