Configure mode and GOOGLE_SERVICE_ACCOUNT_KEY for e2e tests.

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 CLIENT_IMAGE=ivanenkomak/twitter-clone-client:latest
 SERVER_IMAGE=ivanenkomak/twitter-clone-server:latest
+MODE=${MODE}
 PROJECT_ID=${PROJECT_ID}
 OAUTH2_CLIENT_ID=${OAUTH2_CLIENT_ID}
 OAUTH2_CLIENT_SECRET=${OAUTH2_CLIENT_SECRET}
+GOOGLE_SERVICE_ACCOUNT_KEY=${GOOGLE_SERVICE_ACCOUNT_KEY}
 GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS}
