--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -102,6 +102,7 @@ jobs:
       run: |
         docker compose -f ./compose.yaml up -d --build
       env:
+        MODE: Persistent
         PROJECT_ID: ${{ secrets.PROJECT_ID }}
         OAUTH2_CLIENT_ID: ${{ secrets.OAUTH2_CLIENT_ID }}
         OAUTH2_CLIENT_SECRET: ${{ secrets.OAUTH2_CLIENT_SECRET }}
