Add NullMessageHandler that will be used InMemory mode. Add env vars in launch.json.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,8 @@
             "mode": "auto",
             "program": "${file}",
             "env": {
+                "MODE": "InMemory",
+                "AUTHENTICATION_ENABLE": "false",
                 "GOOGLE_APPLICATION_CREDENTIALS": "D:\\Downloads\\twitter-clone-438407-4b74b07d276e.json"
               }
         }
