--- a/server/internal/config/appsettings.json
+++ b/server/internal/config/appsettings.json
@@ -1,5 +1,5 @@
 {
-    "Mode": "Cloud",
+    "Mode": "InMemory",
     "ProjectId": "{your-project-id}",
     "ApiServer": {
         "ApplicationUrl": "localhost:8016"
