--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -158,10 +158,6 @@ jobs:
       run: |
         docker buildx build -t "ivanenkomak/twitter-clone-client:latest" -f ./client/Dockerfile ./client --push
 
-    outputs:
-      server_image: ivanenkomak/twitter-clone-server:latest
-      client_image: ivanenkomak/twitter-clone-client:latest
-
   deploy-to-cloud-run:
     runs-on: ubuntu-latest
     needs: push-images
@@ -182,7 +178,7 @@ jobs:
       - name: Deploy server to Cloud Run
         run: |
           gcloud run deploy twitter-clone-server \
-            --image ${{ needs.push-images.outputs.server_image  }} \
+            --image ivanenkomak/twitter-clone-server:latest \
             --platform managed \
             --region europe-central2 \
             --allow-unauthenticated \
@@ -192,7 +188,7 @@ jobs:
       - name: Deploy client to Cloud Run
         run: |
           gcloud run deploy twitter-clone-client \
-            --image ${{ needs.push-images.outputs.client_image }} \
+            --image ivanenkomak/twitter-clone-client:latest \
             --platform managed \
             --region europe-central2 \
             --allow-unauthenticated \
