--- a/compose.yaml
+++ b/compose.yaml
@@ -30,8 +30,11 @@ services:
       - "AUTHENTICATION_ENABLE=true"
       - "AUTHENTICATION_OAUTH2_CLIENTID=${OAUTH2_CLIENT_ID}"
       - "AUTHENTICATION_OAUTH2_CLIENTSECRET=${OAUTH2_CLIENT_SECRET}"
+      - "AUTHENTICATION_OAUTH2_REDIRECT_URI=${OAUTH2_REDIRECT_URI}"
       - "GOOGLE_SERVICE_ACCOUNT_KEY=${GOOGLE_SERVICE_ACCOUNT_KEY}"
       - "GOOGLE_APPLICATION_CREDENTIALS=/secrets/service-account.json"
+      - "REDIRECT_URI=${REDIRECT_URI}"
+      - "ALLOW_ORIGIN=${ALLOW_ORIGIN}"
     ports:
       - 8016:8016
     depends_on:
