Configure APISERVER_APPLICATIONURL and NODE_ENV.

--- a/.env.cloud
+++ b/.env.cloud
@@ -1,4 +1,5 @@
 MODE=Cloud
+APISERVER_APPLICATIONURL=localhost:8016
 PROJECT_ID=twitter-clone-438407
 OAUTH2_CLIENT_ID=120740449329-6uo779hqeoaaitj6t92gt88e733cv3bv
 OAUTH2_CLIENT_SECRET=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
