--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,7 +15,7 @@ env:
   OAUTH2_CLIENT_ID: ${{ secrets.OAUTH2_CLIENT_ID }}
   OAUTH2_CLIENT_SECRET: ${{ secrets.OAUTH2_CLIENT_SECRET}}
   OAUTH2_REDIRECT_URI: https://twitter-clone-server-120740449329.europe-central2.run.app/auth/google/callback
-  GOOGLE_SERVICE_ACCOUNT_KEY: /secrets/service-account.json
+  GOOGLE_SERVICE_ACCOUNT_KEY: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY}}
   GOOGLE_APPLICATION_CREDENTIALS: /secrets/service-account.json
   REDIRECT_URI: https://twitter-clone-client-120740449329.europe-central2.run.app/callback
   ALLOW_ORIGIN: https://twitter-clone-client-120740449329.europe-central2.run.app/
@@ -180,7 +180,7 @@ jobs:
       - name: Authenticate with Google Cloud
         uses: google-github-actions/auth@v1
         with:
-          credentials_json: ${{ env.GOOGLE_SERVICE_ACCOUNT_KEY }}
+          credentials_json: ${{ env.GOOGLE_APPLICATION_CREDENTIALS }}
 
       # Install Google Cloud SDK
       - name: Set up Google Cloud SDK
