Add logging to e2e tests.

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ MODE=InMemory
 AUTHENTICATION_ENABLE=false
 AUTHENTICATION_OAUTH2_REDIRECT_URI = http://localhost:8016/auth/google/callback
 REDIRECT_URI = https://localhost:3000/callback
-ALLOW_ORIGIN = https://localhost:3000/
+ALLOW_ORIGIN = https://localhost:3000
