--- a/.env.cloud
+++ b/.env.cloud
@@ -7,4 +7,4 @@ OAUTH2_REDIRECT_URI = https://twitter-clone-server-120740449329.europe-central2.
 GOOGLE_SERVICE_ACCOUNT_KEY=/secrets/service-account.json
 GOOGLE_APPLICATION_CREDENTIALS=/secrets/service-account.json
 REDIRECT_URI=https://twitter-clone-client-120740449329.europe-central2.run.app/callback
-ALLOW_ORIGIN=https://twitter-clone-client-120740449329.europe-central2.run.app/
+ALLOW_ORIGIN=https://twitter-clone-client-120740449329.europe-central2.run.app
