Pass client application url to react docker image. Fix URLs in cloud env file. React client Dockerfile must include new env file to use them in runtime.

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MODE=InMemory
+APISERVER_APPLICATIONURL=0.0.0.0:8016
 AUTHENTICATION_ENABLE=false
-AUTHENTICATION_OAUTH2_REDIRECT_URI = http://localhost:8016/auth/google/callback
-REDIRECT_URI = https://localhost:3000/callback
-ALLOW_ORIGIN = https://localhost:3000
+ALLOW_ORIGIN=http://localhost:3000
+REACT_APP_CLIENT_APPLICATIONURL=http://localhost:8016
