--- a/.env.cloud
+++ b/.env.cloud
@@ -1,10 +1,11 @@
 MODE=Cloud
-APISERVER_APPLICATIONURL=localhost:8016
+APISERVER_APPLICATIONURL=0.0.0.0:8016
 PROJECT_ID=twitter-clone-438407
 OAUTH2_CLIENT_ID=120740449329-6uo779hqeoaaitj6t92gt88e733cv3bv
 OAUTH2_CLIENT_SECRET=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
-OAUTH2_REDIRECT_URI = https://twitter-clone-server-120740449329.europe-central2.run.app/auth/google/callback
+OAUTH2_REDIRECT_URI=http://localhost:8016/auth/google/callback
+REDIRECT_URI=http://localhost:3000/callback
+ALLOW_ORIGIN=http://localhost:3000
 GOOGLE_SERVICE_ACCOUNT_KEY=/secrets/service-account.json
 GOOGLE_APPLICATION_CREDENTIALS=/secrets/service-account.json
-REDIRECT_URI=https://twitter-clone-client-120740449329.europe-central2.run.app/callback
-ALLOW_ORIGIN=https://twitter-clone-client-120740449329.europe-central2.run.app
+REACT_APP_CLIENT_APPLICATIONURL=http://localhost:8016
