--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -170,6 +170,7 @@ jobs:
   deploy-to-cloud-run:
     runs-on: ubuntu-latest
     needs: push-images
+    if: false # Do not deploy to Cloud Run
     steps:
       # Authenticate with Google Cloud
       - name: Authenticate with Google Cloud
